--- a/project0/css/styles.css
+++ b/project0/css/styles.css
@@ -32,16 +32,15 @@ h1 {
 .grid {
     background-color: #524948;
     display: grid;
-    margin: 15px;
     padding: 10px;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
     grid-template-columns: auto auto auto auto;
 }
 
 .grid-item {
     background-color: #de2b0b;
-    padding: 15px;
+    padding: 10px;
  }
 
 a {
@@ -94,5 +93,5 @@ p {
 	border: 1px solid black;
 	padding: 10px;
 	background-color: lightgray;
-	margin: 5px;
+	/*margin: 5px;*/
 }
